static/src/scss/_footer.scss
footer.footer {
  margin-top: auto;
  padding: 1rem;

  @include dark-mode {
    background-color: $black;
    color: $dark-mode-text;

    a:hover {
      color: $grey-lighter;
    }
  }

  .content p {
    margin-bottom: 0.25rem;
  }
}

